Starting to work (!)

--- a/ch1.tex
+++ b/ch1.tex
@@ -2,4 +2,34 @@
 
 \chapter{Introduction}
 
-Very wise words here.
+\section{Problems of Jazz Analysis}
+
+When compared to a score by Beethoven (for example), the jazz lead sheet appears
+strikingly bare. The Beethoven score specifies nearly everything a performer
+needs to know in order to perform it. Though the minor details (things like
+dynamics, articulations, phrasing marks, and the like) will differ from piece to
+piece, we can usually depend on the presence of some basic information. It is
+rare for traditional scores not to include the instrumentation, for example, and
+a score that did not include information like the number of measures or which
+notes to play in combination with which which other notes would be very unusual
+indeed.
+
+And yet, this is the usual state affairs for the jazz lead sheet, which is
+probably the most common form of a “jazz score.”\fn{pja-1} Most lead sheets only
+include the basic outline of a melody along with a set of “changes” that
+prescribe the harmonic structure of a piece. Beyond this most basic instruction,
+every other aspect is left up to the performers. Given that most small-group
+jazz musicians approach the music first with these lead sheets, it seems
+appropriate to focus our analytical attention on harmony the more salient of
+those two elements.
+
+Jazz is essentially a harmonic music. In a typical jazz performance, the melody
+of the piece is only heard twice (at the beginning and the end), while the
+harmonic structure is heard throughout, determining the structure of the
+performance. Each soloist typically plays one or more “choruses,” where each
+chorus is understood as a single iteration of the pieces harmonic structure.
+In marked contrast to a Beethoven score, jazz compositions usually remain
+unspecified when it comes to their contrapuntal structure: performers will
+typically improvise counterpoint that fits with the underlying harmonic
+framework. Harmony is the main restraining factor of a piece, and its primary
+method of coherence.
