--- a/diss.tex
+++ b/diss.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt,oneside]{book}
 \input{headers.tex}
+\input{ch1-notes.tex}
 
 % this controls what gets compiled
 \includeonly{ch1}
