--- a/headers.tex
+++ b/headers.tex
@@ -64,10 +64,30 @@
 \usepackage{csquotes}
 \usepackage[chicago]{ellipsis}      % better spaced ellipses
 
-% section heading sizes
-% \usepackage{titlesec}
-% \titleformat*{\section}{\large\bfseries}
+% section headings
+% ----------------
+\usepackage{titlesec}
+\titleformat{\chapter}[display]{%
+  \normalfont\large\bfseries}
+  {\chaptertitlename\ \thechapter}{0pt}{\vspace{-1ex}\Large}{}
+\titlespacing*{\chapter}{0pt}{0pt}{1em}
+
+\titleformat*{\section}{\large\bfseries}
 % \titleformat*{\subsection}{\normalsize\bfseries}
+
+% page header
+% -----------
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+% \setlength{\headheight}{14pt}
+
+\lhead{}
+\chead{}
+\rhead{\thepage}
+\lfoot{}
+\cfoot{}
+%\rfoot{\scriptsize{(final version)}}
+\renewcommand{\headrulewidth}{0pt}
 
 % hyperref
 % --------
