First draft of introduction

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -2,3 +2,30 @@
   This is not to say, of course, that there are not jazz compositions that do
   specify these minor details. These compositions are the exception, rather than
   the rule, in the music in which this study is interested. }
+
+\fntext{pja-2}{%
+  Miles Davis’s “So What” is probably the most well-known modal jazz piece; it
+  is a 32-bar tune in which the first chord, \h{Dm}, lasts 16 bars, moves to
+  \h{Ebm} for 8 bars, and back to \h{Dm} for the final 8.  The term also
+  describes other similar pieces, including the rest of Davis’s album
+  \emph{Kind of Blue}, John Coltrane’s recording of “My Favorite Things,” and
+  Herbie Hancock’s “Maiden Voyage.”}
+
+\fntext{pja-3}{%
+  % I don’t like this note
+  This is the tradition of the “contrafact,” to which I will return later.}
+
+\fntext{pja-4}{%
+  The Thelonious Monk Institute of Jazz maintains a web page on the history of
+  jazz education in America at
+  \url{http://www.jazzinamerica.org/JazzResources/JazzEducation/Page}.}
+
+
+\fntext{pja-5}{%
+  A noted exception here is Andy Jaffe’s \headlesscite{jaffe:1996}, which
+  features an extended bibliography that includes many theoretical works.
+}
+
+\fntext{pja-6}{%
+  See, for example, \cite{gjerdingen:2007}; and \cite{sanguinetti:2012}.
+}
