--- a/ch1.tex
+++ b/ch1.tex
@@ -1,18 +1,20 @@
 % Chapter 1
+% vim:fdm=marker
 
 \chapter{Introduction}
 
 \section{Problems of Jazz Analysis}
+\label{sec:problems-jazz-analysis}
+% {{{
 
 When compared to a score by Beethoven (for example), the jazz lead sheet appears
 strikingly bare. The Beethoven score specifies nearly everything a performer
-needs to know in order to perform it. Though the minor details (things like
-dynamics, articulations, phrasing marks, and the like) will differ from piece to
-piece, we can usually depend on the presence of some basic information. It is
-rare for traditional scores not to include the instrumentation, for example, and
-a score that did not include information like the number of measures or which
-notes to play in combination with which which other notes would be very unusual
-indeed.
+needs to know in order to perform it. Though the minor details (dynamics,
+articulations, phrasing marks, and the like) will differ from piece to piece,
+we can usually depend on the presence of some basic information. It is rare for
+traditional scores not to include the instrumentation, for example, and a score
+that did not include information like the number of measures or which notes to
+play in combination with which which other notes would be very unusual indeed.
 
 And yet, this is the usual state affairs for the jazz lead sheet, which is
 probably the most common form of a “jazz score.”\fn{pja-1} Most lead sheets only
@@ -20,7 +22,7 @@ include the basic outline of a melody along with a set of “changes” that
 prescribe the harmonic structure of a piece. Beyond this most basic instruction,
 every other aspect is left up to the performers. Given that most small-group
 jazz musicians approach the music first with these lead sheets, it seems
-appropriate to focus our analytical attention on harmony the more salient of
+appropriate to focus our analytical attention on harmony, the more salient of
 those two elements.
 
 Jazz is essentially a harmonic music. In a typical jazz performance, the melody
@@ -33,3 +35,113 @@ unspecified when it comes to their contrapuntal structure: performers will
 typically improvise counterpoint that fits with the underlying harmonic
 framework. Harmony is the main restraining factor of a piece, and its primary
 method of coherence.
+
+The word “jazz”---which has been used at various times to describe McKinney’s
+Cotton Pickers, Benny Goodman, Sun Ra, John Zorn, Tito Puente, and Brad
+Mehldau, among many others---is inescapably vague, so it will be useful at
+this point to delimit the terms of this study somewhat. Here I am interested
+in in what might be called “tonal jazz,” which begins in the swing area and
+continues through hard bop, covering roughly the years 1935--1965. In this
+music, functional harmonic progressions are still the norm; “tonal jazz” is
+meant in opposition to “modal jazz,” where the rate of harmonic change is
+slower and the harmony is mostly non-functional.\fn{pja-2} This includes much
+of the music that most people think of when they hear the word “jazz,”
+including big-band swing (Count Basie, much of Duke Ellington’s music), bebop
+(Charlie Parker, Dizzy Gillespie, Thelonious Monk), and the mainstream jazz
+that followed bebop, known variously as “hard bop” or “post-bop” (John
+Coltrane, Sonny Rollins, Bill Evans, and many others). I intend the dates to
+be flexible, especially on the later end; given the strong influence of the
+bebop tradition on jazz and jazz pedagogy, the hard bop style continued to
+exist well beyond 1965, and many players today still play in the style.
+
+% ugly...rewrite {
+It is also reasonable to ask what exactly we mean by “harmony.” Harmony
+is of course one of the oldest traditions in music theory, and as such has
+been hotly contested over the years. Harmony is often found in opposition to
+couterpoint; in this view, counterpoint is concerned with individual melodic
+voices, while harmony is concerned with individual verticalities. In other
+traditions (most notably the Schenkerian tradition), harmony is understood to
+be an outgrowth of counterpoint: verticalities arise primarily through
+contrapuntal procedures. Furthermore, study of harmony is often broken down by
+genre: “tonal harmony” plays a different role than does “chromatic harmony” in
+both theoretical research and pedagogy.
+
+“Harmony” in jazz most commonly refers to the changes themselves, that is, the
+chord symbols given on a lead sheet or arrangement. While this is a fairly
+simple definition, it is a practical one: a chord symbol is a concise way of
+referring to a particular sound, and improvising musicians must be able to
+understand this information relatively quickly. Because the repeating harmonic
+structure of the chorus forms the basis for an entire tune, musicians must all
+agree on which changes they will play. Harmonic structure is inextricably
+linked with a composition’s identity, to such an extent that they can become
+dissociated from any particular melody.\fn{pja-3}
+
+Concealed in this definition, however, is the distinctive feature that makes
+understanding jazz harmony somewhat more difficult. Since the pioneering work
+of George Russell in the late 1950s, many jazz musicians conceive of an
+equivalence between a harmony (a chord symbol) and a
+scale.\footcite{russell:lcc} The chord symbol \h{Dm7} stands for not only the
+notes D--F--A--C, but can imply a wide variety of pitch collections depending
+on its particular tonal context.
+%}
+
+In an attempt to answer some of these problems, this dissertation presents a
+transformational model of jazz harmony. While on the surface a
+transformational model may seem abstract and far-removed from the concerns of
+performing jazz musicians, harmony in jazz fits together nicely with David
+Lewin’s famous “transformational attitude.”\footcite[159]{lewin:gmit} A jazz
+musician does not typically think of harmonies as a series of points in space,
+but rather as a series of “characteristic gestures” between them. Rather than
+focusing on an underlying tonality, a jazz musician often tries to “make the
+changes”---to fully engage with the sound of each individual harmony.
+
+There is often quite a large gap between the way jazz is most commonly taught
+(in jazz studios and pedagogical books) and the way it has traditionally been
+understood by music theorists. Another goal of the present study is to use
+transformational methods in an attempt to narrow this gap, by bringing
+theoretical and mathematical rigor to materials that are often ignored by the
+theory community, and by applying established theoretical principles in a way
+that corresponds closely with the understanding of jazz musicians.
+
+While we can never claim to know “what jazz musicians think,” we might get
+somewhat closer to an answer by examining jazz pedagogical materials. In the
+late 1960s, jazz began to be accepted into the academy, and many young jazz
+musicians began to learn to play the music in schools, rather than exclusively
+from older musicians.\fn{pja-4} To supplement this teaching, a great deal of
+pedagogical material has appeared that aims to teach young musicians how to
+play jazz.
+
+Unfortunately, there is little interaction between these pedagogical materials
+and music theoretical materials. Pedagogical materials, such as the recent
+\emph{Berklee Book of Jazz Harmony}\nocite{berklee:harmony}, often do not have
+bibliographies or mention recent work in the theoretical literature.\fn{pja-5}
+Likewise, most theoretical work does not refer to these harmonic handbooks
+which are staples of jazz education. Mark Levine’s \emph{Jazz Theory
+Book}\nocite{levine:1995}, widely regarded in the jazz education world as
+\emph{the} book on jazz theory, does not appear in any of the bibliographies
+in the special jazz issue of \emph{Music Theory Online} (18.3), for example.
+
+In recent years the theory community has embraced pedagogical materials as a
+means of uncovering how historical musicians might have thought about their
+own music.\fn{pja-6} Though jazz pedagogues do not typically publish articles
+in music theory journals or otherwise consider themselves “music theorists,”
+per se, the goal of their harmonic textbooks is quite similar to the goals of
+pedagogical books in music theory: to teach students how to think in a
+particular style of music.
+
+David Lewin points out in his introduction to transformational theory that
+when considering a particular musical passage, we often “conceptualize along
+with it, as one of its characteristic textural features, a family of directed
+measurements, distances, or motions of some sort.”\footcite[16]{lewin:gmit} I
+certainly hear these characteristic motions when I listen to jazz, and I think
+it is these motions that jazz pedagogues are emphasizing when they
+teach students to “make the changes.” Despite its somewhat hostile
+mathematical appearance, transformational theory is an effective means of
+exploring these families of intuitions. Modeling sets of chord changes as
+transformations between harmonic objects, for example, allows the theoretical
+discourse to draw on the ways in which jazz musicians teach harmony, and can
+bring these two disparate fields somewhat closer together.
+
+% }}}
+
+\section{Theoretical Approaches to Jazz Harmony}
