--- a/diss.bib
+++ b/diss.bib
@@ -276,6 +276,14 @@ Theory} }
   year        = {Forthcoming}
 }
 
+@book{jaffe:1996,
+  author      = {Jaffe, Andy},
+  title       = {Jazz Harmony},
+  address     = {Tübingen},
+  publisher   = {Advance Music},
+  year        = {1996},
+}
+
 @article{larson:1996,
   author      = {Larson, Steve},
   title       = {Strict Use of Analytic Notation},
@@ -492,6 +500,14 @@ Theory} }
   publisher   = {Concept},
   year        = {\mkbibbrackets{1953} 2001},
   note        = {\textit{The Art and Science of Tonal Gravity}}
+}
+
+@book{sanguinetti:2012,
+  author      = {Sanguinetti, Giorgio},
+  title       = {The Art of Partimento: History, Theory, and Practice},
+  address     = {New York},
+  publisher   = {Oxford University Press},
+  year        = {2012}
 }
 
 @article{santa:2003,
