--- a/headers.tex
+++ b/headers.tex
@@ -31,7 +31,7 @@
   notes,
   parentracker=true
 ]{biblatex-chicago}
-\bibliography{diss.bib}
+\addbibresource{diss.bib}
 
 % footnotes
 % ------------
@@ -94,6 +94,7 @@
 % (Provides PDF table of contents)
 \usepackage[unicode,pdfencoding=auto]{hyperref}
 \hypersetup{bookmarks=true}
+\urlstyle{same}
 
 % examples/captions
 % -----------------
