Editing/adding some stuff to intro

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -15,6 +15,33 @@
   % I don’t like this note
   This is the tradition of the “contrafact,” to which I will return later.}
 
+\fntext{pja-3a}{%
+  Fake books are collections of lead sheets which were traditionally compiled
+  anonymously and sold illegally, in order to avoid paying the copyright
+  owners of the compositions they contained. The name “fake book” comes from
+  the fact that with the melody and chord changes, jazz musicians can easily
+  “fake” a tune they do not know. The most famous jazz fake book is ironically
+  titled \emph{The Real Book}, and was compiled in Boston in the early 1970s.
+  In recent years, fake books have become mainstream, and most of them have
+  now obtained proper copyright permissions. Hal Leonard now publishes the 6th
+  edition of \emph{The Real Book}\nocite{realbook} (a nod to the five illegal
+  editions); many of the notorious errors in the earlier editions have been
+  corrected and it is now available for purchase legally. Further references
+  to \emph{The Real Book} in this document refer to this version unless
+  otherwise noted. For a history of fake books, see \cite{kernfeld:2006}.}
+
+\fntext{pja-3b}{%
+  By the time they become standards, many non-jazz compositions (Tin Pan Alley
+  songs or traditional songs like “Back Home Again in Indiana”) have been
+  adapted, typically to additional harmonic motion to provide interest during
+  solos. Some examples are more radical: the tune “Alice in Wonderland,” for
+  example, is known to jazz musicians as a jazz waltz with one chord per bar.
+  The main title music in the 1951 film from which it was taken, however, is
+  in 4/4 with a relatively slower harmonic rhythm.}
+
+\fntext{pja-3c}{%
+  \cite[5--6]{martin:1996}. See also \cite[36--39]{heyer:2011}.}
+
 \fntext{pja-4}{%
   The Thelonious Monk Institute of Jazz maintains a web page on the history of
   jazz education in America at
@@ -23,9 +50,7 @@
 
 \fntext{pja-5}{%
   A noted exception here is Andy Jaffe’s \headlesscite{jaffe:1996}, which
-  features an extended bibliography that includes many theoretical works.
-}
+  features an extended bibliography that includes many theoretical works.}
 
 \fntext{pja-6}{%
-  See, for example, \cite{gjerdingen:2007}; and \cite{sanguinetti:2012}.
-}
+  See, for example, \cite{gjerdingen:2007}; and \cite{sanguinetti:2012}.}
