--- a/ch1.tex
+++ b/ch1.tex
@@ -54,36 +54,81 @@ be flexible, especially on the later end; given the strong influence of the
 bebop tradition on jazz and jazz pedagogy, the hard bop style continued to
 exist well beyond 1965, and many players today still play in the style.
 
-% ugly...rewrite {
-It is also reasonable to ask what exactly we mean by “harmony.” Harmony
-is of course one of the oldest traditions in music theory, and as such has
-been hotly contested over the years. Harmony is often found in opposition to
-couterpoint; in this view, counterpoint is concerned with individual melodic
-voices, while harmony is concerned with individual verticalities. In other
-traditions (most notably the Schenkerian tradition), harmony is understood to
-be an outgrowth of counterpoint: verticalities arise primarily through
-contrapuntal procedures. Furthermore, study of harmony is often broken down by
-genre: “tonal harmony” plays a different role than does “chromatic harmony” in
-both theoretical research and pedagogy.
+Now that we have dilineated “jazz,” we should explain exactly what we mean by
+“harmony.” Harmony is of course one of the oldest topics in music theory, and
+as such has been hotly contested throughout its history. It is often
+found in opposition to couterpoint; in this view, counterpoint is concerned
+with individual melodic voices, while harmony is concerned with individual
+verticalities. In other traditions (most notably the Schenkerian tradition),
+harmony is understood to be an outgrowth of counterpoint: verticalities arise
+primarily through contrapuntal procedures. Furthermore, study of harmony is
+often broken down by genre: “tonal harmony” plays a different role than does
+“chromatic harmony” in both theoretical research and pedagogy.
 
-“Harmony” in jazz most commonly refers to the changes themselves, that is, the
-chord symbols given on a lead sheet or arrangement. While this is a fairly
-simple definition, it is a practical one: a chord symbol is a concise way of
-referring to a particular sound, and improvising musicians must be able to
-understand this information relatively quickly. Because the repeating harmonic
-structure of the chorus forms the basis for an entire tune, musicians must all
-agree on which changes they will play. Harmonic structure is inextricably
-linked with a composition’s identity, to such an extent that they can become
-dissociated from any particular melody.\fn{pja-3}
+When jazz musicians refer to “harmony,” they are typically referring to the
+changes themselves, that is, the chord symbols given on a lead sheet or
+arrangement. Even when they are not playing from sheet music, the chord symbol
+is the basic unit of harmonic understanding for jazz musicians. The reason for
+this is largly practical: a chord symbol is a concise way of referring to a
+particular sound, and improvising musicians must be able to understand this
+information quickly (when reading) and to recall it easily (when improvising).
 
-Concealed in this definition, however, is the distinctive feature that makes
-understanding jazz harmony somewhat more difficult. Since the pioneering work
-of George Russell in the late 1950s, many jazz musicians conceive of an
-equivalence between a harmony (a chord symbol) and a
-scale.\footcite{russell:lcc} The chord symbol \h{Dm7} stands for not only the
-notes D--F--A--C, but can imply a wide variety of pitch collections depending
-on its particular tonal context.
-%}
+% rewrite? {
+Since the pioneering work of George Russell in the late 1950s, many jazz%{{{
+musicians conceive of an equivalence between a harmony (a chord symbol) and a
+scale.\footcite{russell:lcc} The chord symbol \h{Dm7} might imply a D dorian
+scale, for example, rather than simply the notes D--F--A--C. Because any of
+the notes of this scale will sound relatively good over a \h{Dm7} chord, the
+chord symbol makes a convenient shorthand for a particular “way of playing.”
+This equivalence between chords and scales will be the focus of chapter 4; for
+now it enough to note that understanding jazz harmony often involves more than
+understanding relationships between four-voice seventh chords.
+%}%}}}
+
+When analyzing jazz harmony, it is often difficult to determine exactly what
+one should be analyzing. Lead sheets as circulated in fake books can be highly
+inaccurate, and often cannot be relied upon as a single source for any
+particular jazz performance, since it is rare that performers play directly
+from a lead sheet with no modifications.\fn{pja-3a} In the case of jazz
+standards which may have originated elsewhere, we might wonder whether should
+we analyze the original sources. In many cases, however, the “jazz standard”
+version may be significantly different from the original version, reflecting a
+history of adaptation by generations of jazz musicians.\fn{pja-3b} To make
+matters worse, this knowledge is often secret knowledge, not written down and
+learned only from more experienced musicians.
+
+Many published jazz analyses rely on transcriptions of particular performances
+as a way to avoid some of these issues. In general, this solution works well,
+and I will certainly make use of them from time to time. This study, however,
+is interested in harmony more generally, and transcriptions can confuse
+matters somewhat. The kinds of questions I am interested in answering are of
+the type “What can we say about harmony in the piece ‘Autumn Leaves’?” and
+less often of the type “What can we say about Bill Evans’s use of harmony in
+the recording of ‘Autumn Leaves’ from \emph{Portrait in Jazz}?” Furthermore,
+even transcriptions are not definitive when it comes to harmony: the pianist
+and guitarist might not be playing the same chord; the soloist might have a
+different harmony in mind than the rhythm section; or the bass player might
+play a bass line in such a way that affects our perception of the chordal
+root. Even in the course of a single performance, a group might alter a tune’s
+harmonic progression, perhaps preferring some substitutions during solos and
+others during the head.
+
+This is a problem without one clear solution, and it may make more sense to
+use one method or another depending on the situation. Some compositions have
+canonical recordings---Coleman Hawkins’s recording of “Body and Soul,” for
+example---and in those circumstances determining the changes is usually
+unproblematic. Other compositions are more fluid, and different choruses might
+alter the basic structure throughout (substituting a \h{V7b9} for a \h{V13s11}
+chord, for example).  In these cases, I am interested in what Henry Martin has
+called the “ideal changes”; a hypothetical set of chords that we can use as a
+basis for understanding the many variations that might occur in actual
+performance.\fn{pja-3c} These changes represent a sort of Platonic model of a
+composition; individual performances of “Autumn Leaves” can be seen as
+instances of some ideal “\textsc{Autumn Leaves}.” Determining these ideal
+changes is often a process of mediating published lead sheets, recorded
+versions, and other sources; throughout this study I have tried to clarify
+exactly \emph{what} harmony I am analyzing in any given example.
+
 
 In an attempt to answer some of these problems, this dissertation presents a
 transformational model of jazz harmony. While on the surface a
