--- a/diss.bib
+++ b/diss.bib
@@ -281,7 +281,15 @@ Theory} }
   title       = {Jazz Harmony},
   address     = {Tübingen},
   publisher   = {Advance Music},
-  year        = {1996},
+  year        = {1996}
+}
+
+@book{kernfeld:2006,
+  author      = {Kernfeld, Barry},
+  title       = {The Story of Fake Books: Bootlegging Songs to Musicians},
+  address     = {Lanham, MD},
+  publisher   = {Scarecrow Press},
+  year        = {2006}
 }
 
 @article{larson:1996,
