Use subtitles in bib

--- a/diss.bib
+++ b/diss.bib
@@ -68,8 +68,8 @@ Theory} }
 
 @article{capuzzo:2006,
   author      = {Capuzzo, Guy},
-  title       = {{Pat Martino's} {The Nature of the Guitar}: An Intersection
-                of Jazz Theory and {Neo-Riemannian} Theory},
+  title       = {{Pat Martino's} {The Nature of the Guitar}},
+  subtitle    = {An Intersection of Jazz Theory and {Neo-Riemannian} Theory},
   journal     = {Music Theory Online},
   volume      = {12},
   number      = {1},
@@ -79,8 +79,8 @@ Theory} }
 
 @article{childs:1998,
   author      = {Childs, Adrian P.},
-  title       = {Moving Beyond Neo-Riemannian Triads: Exploring a
-                Transformational Model for Seventh Chords},
+  title       = {Moving Beyond Neo-Riemannian Triads},
+  subtitle    = {Exploring a Transformational Model for Seventh Chords},
   journal     = {Journal of Music Theory},
   volume      = {42},
   number      = {2},
@@ -103,9 +103,8 @@ Theory} }
 
 @book{cohn:2012,
   author      = {Cohn, Richard},
-  title       = {Audacious Euphony: Chromatic Harmony and the Triad's Second
-                Nature},
-  shorttitle  = {{Audacious Euphony}},
+  title       = {Audacious Euphony},
+  subtitle    = {Chromatic Harmony and the Triad's Second Nature},
   address     = {{New York}},
   publisher   = {Oxford University Press},
   year        = {2012}
@@ -113,8 +112,8 @@ Theory} }
 
 @article{cohn:intro,
   author      = {Cohn, Richard},
-  title       = {Introduction to Neo-Riemannian Theory: A Survey and a
-                Historical Perspective},
+  title       = {Introduction to Neo-Riemannian Theory},
+  subtitle    = {A Survey and a Historical Perspective},
   journal     = {Journal of Music Theory},
   volume      = {42},
   number      = {2},
@@ -131,6 +130,17 @@ Theory} }
   address     = {Miami},
   publisher   = {Belwin},
   year        = {1991}
+}
+
+@article{cook:1989,
+  author      = {Cook, Nicholas},
+  title       = {Schenker's Theory of Music as Ethics},
+  journal     = {The Journal of Musicology},
+  volume      = {7},
+  number      = {4},
+  pages       = {415--39},
+  month       = oct,
+  year        = {1989}
 }
 
 @article{cqt:2008,
@@ -155,8 +165,9 @@ Theory} }
 
 @article{douthettsteinbach:1998,
   author      = {Douthett, Jack and Steinbach, Peter},
-  title       = {Parsimonious Graphs: A Study in Parsimony, Contextual
-                Transformations, and Modes of Limited Transposition},
+  title       = {Parsimonious Graphs},
+  subtitle    = {A Study in Parsimony, Contextual Transformations, and Modes
+                of Limited Transposition},
   shorttitle  = {Parsimonious Graphs},
   journal     = {Journal of Music Theory},
   volume      = {42},
@@ -210,8 +221,8 @@ Theory} }
 
 @article{heyer:2012,
   author      = {Heyer, David J.},
-  title       = {Applying Schenkerian Theory to Mainstream Jazz: A
-                Justification for an Orthodox Approach},
+  title       = {Applying Schenkerian Theory to Mainstream Jazz},
+  subtitle    = {A Justification for an Orthodox Approach},
   journal     = {Music Theory Online},
   volume      = {18},
   number      = {3},
@@ -286,7 +297,8 @@ Theory} }
 
 @book{kernfeld:2006,
   author      = {Kernfeld, Barry},
-  title       = {The Story of Fake Books: Bootlegging Songs to Musicians},
+  title       = {The Story of Fake Books},
+  subtitle    = {Bootlegging Songs to Musicians},
   address     = {Lanham, MD},
   publisher   = {Scarecrow Press},
   year        = {2006}
@@ -303,8 +315,8 @@ Theory} }
 
 @article{larson:1998,
   author      = {Larson, Steve},
-  title       = {Schenkerian Analysis of Modern Jazz: Questions about
-                Method},
+  title       = {Schenkerian Analysis of Modern Jazz},
+  subtitle    = {Questions about Method},
   journal     = {Music Theory Spectrum},
   volume      = {20},
   number      = {2},
@@ -326,8 +338,8 @@ Theory} }
 
 @book{larson:2009,
   author      = {Larson, Steve},
-  title       = {Analyzing Jazz: A Schenkerian Approach},
-  shorttitle  = {Analyzing Jazz},
+  title       = {Analyzing Jazz},
+  subtitle    = {A Schenkerian Approach},
   address     = {Hillsdale, NY},
   publisher   = {Pendragon Press},
   year        = {2009}
@@ -344,6 +356,7 @@ Theory} }
 @book{lewin:gmit,
   author      = {Lewin, David},
   title       = {Generalized Musical Intervals and Transformations},
+  shorttitle  = {GMIT},
   publisher   = {Oxford University Press},
   year        = {\mkbibbrackets{1987} 2007}
 }
@@ -366,7 +379,8 @@ Theory} }
 
 @article{martin:1988,
   author      = {Martin, Henry},
-  title       = {Jazz Harmony: A Syntactic Background},
+  title       = {Jazz Harmony},
+  subtitle    = {A Syntactic Background},
   journal     = {Annual Review of Jazz Studies},
   volume      = {4},
   pages       = {9--30},
@@ -393,8 +407,8 @@ Theory} }
 
 @article{mcfarland:2012,
   author      = {McFarland, Mark},
-  title       = {Schenker and the Tonal Jazz Repertory: A Response to
-                Martin},
+  title       = {Schenker and the Tonal Jazz Repertory},
+  subtitle    = {A Response to Martin},
   journal     = {Music Theory Online},
   volume      = {18},
   number      = {3},
@@ -512,7 +526,8 @@ Theory} }
 
 @book{sanguinetti:2012,
   author      = {Sanguinetti, Giorgio},
-  title       = {The Art of Partimento: History, Theory, and Practice},
+  title       = {The Art of Partimento},
+  subtitle    = {History, Theory, and Practice},
   address     = {New York},
   publisher   = {Oxford University Press},
   year        = {2012}
@@ -541,8 +556,8 @@ Theory} }
 
 @article{strunk:1979,
   author      = {Strunk, Steven},
-  title       = {The Harmony of Early Bop: A Layered Approach},
-  shorttitle  = {The Harmony of Early Bop},
+  title       = {The Harmony of Early Bop},
+  subtitle    = {A Layered Approach},
   sorttitle   = {Harmony of Early Bop},
   journal     = {Journal of Jazz Studies},
   volume      = {6},
@@ -561,8 +576,8 @@ Theory} }
 
 @article{tymoczko:1997,
   author      = {Tymoczko, Dmitri},
-  title       = {The Consecutive-Semitone Constraint on Scalar Structure: A
-                Link Between Impressionism and Jazz},
+  title       = {The Consecutive-Semitone Constraint on Scalar Structure},
+  subtitle    = {A Link Between Impressionism and Jazz},
   journal     = {Intégral},
   volume      = {11},
   pages       = {135--79},
@@ -593,9 +608,8 @@ Theory} }
 
 @book{tymoczko:2011,
   author      = {Tymoczko, Dmitri},
-  title       = {A Geometry of Music: Harmony and Counterpoint in the
-                Extended Common Practice},
-  shorttitle  = {A Geometry of Music},
+  title       = {A Geometry of Music},
+  subtitle    = {Harmony and Counterpoint in the Extended Common Practice},
   sorttitle   = {Geometry of Music},
   address     = {New York},
   publisher   = {Oxford University Press},
